[package]
name = "bigtools"
version = "0.2.2-dev"
authors = ["Jack Huey <jackh726@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A library and associated tools for reading and writing bigwigs and bigbeds"
keywords = ["bigwig", "bio"]
documentation = "https://docs.rs/bigtools"
repository = "https://github.com/jackh726/bigtools"

[dependencies]
byteorder = "1"
byteordered = "0.6.0"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tempfile = "3"
futures = { version = "0.3.28", features = ["thread-pool"] }
parking_lot = { version = "0.12.1" }
serde = { version = "1", features = ["derive"] }
clap = "3.2.0"
itertools = "0.10"
bincode = "1.3"
attohttpc = { version = "0.25", optional = true }
libdeflater = "0.13"
thiserror = "1"
ryu = "1.0"
ufmt = { version = "0.2", features = ["std"] }
bytes = "1.4.0"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
debug-assertions = false
debug = false

[profile.dev]
opt-level = 3

[lib]
name = "bigtools"
path = "src/lib.rs"

[[bin]]
name = "test"
required-features = ["remote"]

[features]
default = ["remote"]
remote = ["attohttpc"]

