[package]
name = "bigtools"
version = "0.2.5-dev"
authors = ["Jack Huey <jackh726@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A library and associated tools for reading and writing bigwigs and bigbeds"
keywords = ["bigwig", "bio"]
documentation = "https://docs.rs/bigtools"
repository = "https://github.com/jackh726/bigtools"

[dependencies]
byteorder = "1"
byteordered = "0.6.0"
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-utils = "0.8"
tempfile = { version = "3", optional = true }
futures = { version = "0.3.28", features = ["thread-pool"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "4.3", optional = true }
itertools = { version = "0.10", optional = true }
bincode = { version = "1.3", optional = true }
attohttpc = { version = "0.25", optional = true }
libdeflater = "0.13"
thiserror = "1"
ryu = { version = "1.0", optional = true }
ufmt = { version = "0.2", features = ["std"], optional = true }
bytes = { version = "1.4.0", optional = true }

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
debug-assertions = false
debug = false

[profile.dev]
opt-level = 3

[lib]
name = "bigtools"
path = "src/lib.rs"

[[bin]]
name = "bedgraphtobigwig"
required-features = ["cli"]

[[bin]]
name = "bedtobigbed"
required-features = ["cli"]

[[bin]]
name = "bigbedtobed"
required-features = ["cli"]

[[bin]]
name = "bigtools"
required-features = ["cli"]

[[bin]]
name = "bigwigaverageoverbed"
required-features = ["cli"]

[[bin]]
name = "bigwiginfo"
required-features = ["cli"]

[[bin]]
name = "bigwigmerge"
required-features = ["cli"]

[[bin]]
name = "bigwigtobedgraph"
required-features = ["cli"]

[[bin]]
name = "bigwigvaluesoverbed"
required-features = ["cli"]

[[bin]]
name = "test"
required-features = ["remote", "cli"]

[[bin]]
name = "verify"
required-features = ["cli"]

[features]
default = ["remote", "read", "write", "cli"]
remote = ["attohttpc", "tempfile"]
cli = ["clap", "ryu", "ufmt"]
read = ["bytes"]
write = ["crossbeam-channel", "tempfile", "futures", "serde", "itertools", "bincode"]
