[package]
name = "pybigtools"
version = "0.1.0"
authors = ["Jack <jackh726@gmail.com>"]
edition = "2021"

[lib]
name = "pybigtools"
crate-type = ["cdylib"]

[dependencies]
bigtools = { version = "0.3.1-dev", path = "../bigtools" }
url = "2.4.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
futures = { version = "0.3.1", features = ["thread-pool"] }
numpy = "0.19"
pyo3 = { version = "0.19.1", features = ["extension-module"] }
