[package]
name = "pybigtools"
version = "0.2.5"
authors = ["Jack <jackh726@gmail.com>"]
edition = "2021"

[lib]
name = "pybigtools"
crate-type = ["cdylib"]

[dependencies]
bigtools = { version = "0.5.6", path = "../bigtools", default_features = false, features = ["read", "write"] }
url = "2.5.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }
futures = { version = "0.3.1", features = ["thread-pool"] }
numpy = "0.22"
pyo3 = { version = "0.22", features = ["extension-module"] }

[features]
default = ["remote"]
remote = ["bigtools/remote"]
