[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pybigtools"
description = "Python bindings to the Bigtools Rust library for high-performance BigWig and BigBed I/O"
license = { text = "MIT" }
keywords = [
    "bigwig",
    "bigbed",
    "bbi",
    "bioinformatics",
    "genomics",
    "kent",
    "ucsc",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
  "ruff",
  {include-group = "test"}
]
test = [
  "pytest",
  "smart_open[http]",
]

[project.urls]
homepage = "https://github.com/jackh726/bigtools"
documentation = "https://bigtools.readthedocs.io"
repository = "https://github.com/jackh726/bigtools"

[tool.maturin]
python-source = "pybigtools"

[tool.uv]
default-groups = ["dev"]
