[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pybigtools"
description = "Python bindings to the Bigtools Rust library for high-performance BigWig and BigBed I/O"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "bigwig",
    "bigbed",
    "bbi",
    "bioinformatics",
    "genomics",
    "kent",
    "ucsc",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
  "ruff",
  {include-group = "test"},
  {include-group = "docs"}
]
test = [
  "pybbi>=0.4.2",
  "pytest",
  "smart_open[http]",
]
docs = [
  "sphinx>=7.0; python_version >= '3.10'",
  "furo>=2024.1; python_version >= '3.10'",
  "myst-parser>=2.0; python_version >= '3.10'",
  "sphinx-autobuild>=2021.3.14",
]

[project.urls]
homepage = "https://github.com/jackh726/bigtools"
documentation = "https://bigtools.readthedocs.io"
repository = "https://github.com/jackh726/bigtools"

[tool.maturin]
python-source = "."

[tool.pytest.ini_options]
filterwarnings = [
    # Deprecation warnings from pybigtools' `values()` are expected during
    # the deprecation cycle and would otherwise flood the test output.
    # Tests that exercise the deprecation path itself use
    # `pytest.warns(DeprecationWarning)` locally.
    "ignore::DeprecationWarning:pybigtools",
]

[tool.uv]
default-groups = ["dev"]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
